--- a/TASK3CALCULATOR/build.gradle
+++ b/TASK3CALCULATOR/build.gradle
@@ -1,27 +1,55 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-buildscript {
-    ext.kotlin_version = '1.7.10'
-    repositories {
-        google()
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:8.1.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+android {
+    compileSdkVersion 34
+
+    defaultConfig {
+        applicationId "com.darkempire78.opencalculator"
+        resourceConfigurations += ['ar', 'az', 'be', 'bn', 'bs', 'cs', 'de', 'el', 'es', 'fa', 'fr', 'hi', 'hr', 'hu', 'in', 'it', 'ja', 'kn', 'mk', 'ml', 'nb-rNO', 'nl', 'or', 'pl', 'pt-rBR', 'ro', 'ru', 'sat', 'sr', 'sv', 'tr', 'uk', 'vi', 'zh-rCN', 'zh-rHK', 'zh-rTW']
+        minSdkVersion 24
+        targetSdkVersion 34
+        versionCode 44
+        versionName "3.0.0-beta4"
+
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
+    buildTypes {
+        release {
+            minifyEnabled true
+            shrinkResources true
+            signingConfig signingConfigs.debug
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            applicationIdSuffix ".debug"
+            debuggable true
+        }
+    }
+
+    viewBinding {
+        enabled = true
+    }
+
+    buildFeatures {
+        viewBinding = true
+    }
+    namespace 'com.darkempire78.opencalculator'
 }
 
-allprojects {
-    repositories {
-        google()
-        mavenCentral()
-        maven { url 'https://jitpack.io' }
-    }
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
+dependencies {
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.preference:preference-ktx:1.2.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.google.android.material:material:1.10.0'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2"
+    implementation 'com.github.hannesa2:AndroidSlidingUpPanel:4.4.1'
+    implementation 'androidx.preference:preference-ktx:1.2.1'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation 'com.google.code.gson:gson:2.9.1'
 }
